--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -6,12 +6,13 @@
     }
 
     html {
-        width: 100vw;
-        height: 100vw;
+        width: 100%;
+        /* height: 100vh; */
     }
 
+
     body {
-        width: 100vh;
+        width: 100%;
         display: flex;
         margin: 0 auto;
         align-content: center;
@@ -24,7 +25,7 @@
     }
 
     .content-main {
-        width: 95vh;
+        width: 90%;
     }
 
     .menu-title {
@@ -42,7 +43,7 @@
     }
 
     .container-main-image {
-        width: 90vh;
+        width: 100%;
         gap: 2em;
         padding: 0 0 2em 0;
     }
@@ -60,7 +61,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        width: 90vh;
+        width: 100%;
         /* background-color: rgb(0, 0, 0); */
         margin-bottom: 10%;
     }
