--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -7,6 +7,7 @@
 
     html {
         width: 100%;
+        /* max-height: 300px; */
         /* height: 100vh; */
     }
 
@@ -159,7 +160,6 @@
         display: flex;
         flex-direction: column-reverse;
         gap: .5em;
-        /* background-color: aqua; */
         padding-top: 1em;
     }
 
@@ -167,7 +167,9 @@
         display: flex;
         flex-direction: column;
         text-align: center;
-        font-size: 1.2em;
+        flex-grow: 1;
+        font-size: 1em;
+        /* background-color: aqua; */
         gap: .5em;
     }
 }
